Add comprehensive socket and executor coverage tests
- Add test_socket.cc with 263 lines of socket operation tests:
  - Test socket creation, close, shutdown operations
  - Test set_non_blocking with true/false flags
  - Test get_last_error and get_addr on sockets
  - Test bind, listen, accept operations
  - Test send, recv, send_shutdown operations
  - Test connect operations (blocking and non-blocking)
  - Test error conditions (bind failure, connect error)

- Add exception-throwing test methods to methods.cc:
  - std_exception_method: throws std::runtime_error
  - unknown_exception_method: throws non-exception type (int)

- Add executor exception handling tests to test_integration.cc:
  - pool_executor_std_exception_handling: covers executor.cc lines 220-222
  - pool_executor_unknown_exception_handling: covers executor.cc lines 224-226

This targets specific uncovered lines in:
- socket.cc: lines 41-44, 62-66, 76-102, 104-128, 130-161, 163-173
- executor.cc: lines 220-227

Total: +313 lines of new test code

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -43,6 +43,7 @@ iqxmlrpc_test(inet-addr-test test_inet_addr.cc)
 iqxmlrpc_test(value-types-extended-test test_value_types_extended.cc)
 iqxmlrpc_test(method-dispatch-test test_method_dispatch.cc)
 iqxmlrpc_test(exceptions-test test_exceptions.cc)
+iqxmlrpc_test(socket-test test_socket.cc)
 
 # Integration test (in-process server/client testing)
 iqxmlrpc_test(integration-test test_integration.cc methods.cc)
