Exclude all test files from Codecov coverage report
Use glob pattern "tests/**/*" to exclude all test files from coverage
metrics instead of listing individual files. Test files don't need
coverage tracking as they are the tests themselves.

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,11 +1,5 @@
 ignore:
-  - "tests/test_server.cc"
-  - "tests/client.cc"
-  - "tests/client_stress.cc"
-  - "tests/server_config.cc"
-  - "tests/client_common.cc"
-  - "tests/client_opts.cc"
-  - "tests/test_integration.cc"
+  - "tests/**/*"  # Exclude all test files from coverage report
 
 coverage:
   status:
