--- a/codecov.yml
+++ b/codecov.yml
@@ -8,12 +8,14 @@ coverage:
       default:
         target: auto
         threshold: 1%
+        paths:
+          - "libiqxmlrpc/**"  # Only count library code for project coverage
     patch:
       default:
         target: auto
         informational: true
         paths:
-          - "libiqxmlrpc/"
+          - "libiqxmlrpc/**"  # Only count library code for patch coverage
 
 comment:
   layout: "reach, diff, flags, files, tests"
