Fix cppcheck errors and style issues
- Fix syntax error in Solaris gethostbyname_r macro (typo: extra parenthesis)
- Initialize max_fd member in Reactor_select_impl constructor
- Add parentheses to clarify & vs ?: precedence in reactor_poll_impl
- Remove unused can_cast<T>() private template function from Value class
- Add cppcheck-suppress for false positive constParameterPointer warnings
- Enable --error-exitcode=1 in CI to fail builds on cppcheck errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,4 +146,5 @@ jobs:
         cppcheck --enable=warning,style,performance \
           --suppress=missingIncludeSystem \
           --inline-suppr \
+          --error-exitcode=1 \
           libiqxmlrpc/
