--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Configure
       run: |
         mkdir build && cd build
-        cmake -Dbuild_tests=ON -DCMAKE_CXX_FLAGS="-DBOOST_TIMER_ENABLE_DEPRECATED" ..
+        cmake -Dbuild_tests=ON -DCMAKE_CXX_FLAGS="-DBOOST_TIMER_ENABLE_DEPRECATED -Wall -Wextra -Werror" ..
 
     - name: Build
       run: cmake --build build
@@ -128,7 +128,7 @@ jobs:
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         files: coverage.info
-        fail_ci_if_error: false
+        fail_ci_if_error: true
         verbose: true
 
   cppcheck:
@@ -143,7 +143,7 @@ jobs:
 
     - name: Run cppcheck
       run: |
-        cppcheck --enable=warning,style,performance \
+        cppcheck --enable=warning,style,performance,portability \
           --suppress=missingIncludeSystem \
           --inline-suppr \
           --error-exitcode=1 \
