Add -Weffc++ compiler warning flag to CI
Enable the Effective C++ warning flag to catch additional code quality
issues. Fix non-virtual destructor warnings in base classes with virtual
functions by adding explicit virtual destructors.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Configure
       run: |
         mkdir build && cd build
-        cmake -Dbuild_tests=ON -DCMAKE_CXX_FLAGS="-DBOOST_TIMER_ENABLE_DEPRECATED -Wall -Wextra -Werror" ..
+        cmake -Dbuild_tests=ON -DCMAKE_CXX_FLAGS="-DBOOST_TIMER_ENABLE_DEPRECATED -Wall -Wextra -Weffc++ -Werror" ..
 
     - name: Build
       run: cmake --build build
