Add wire protocol compatibility testing infrastructure
Add infrastructure for testing wire protocol compatibility between
libiqxmlrpc and third-party XML-RPC implementations:

- COMPATIBILITY_TESTING_PLAN.md: Comprehensive testing plan with
  P0-P3 priority levels, risk assessment, and test cases

- tests/test_wire_compatibility.cc: Tests all XML-RPC value types
  against an external server, including edge cases (INT_MIN/MAX,
  UTF-8, XML special chars, empty values)

- tests/interop/python_xmlrpc_server.py: Thread-safe Python XML-RPC
  test server with 17 test methods

- tests/interop/run_interop_tests.sh: Automated interop test runner

Usage:
  python3 tests/interop/python_xmlrpc_server.py --port 8000 &
  XMLRPC_TEST_PORT=8000 ./tests/wire-compatibility-test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -69,3 +69,11 @@ add_custom_target(perf-test
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     COMMENT "Running performance benchmarks..."
 )
+
+# Wire protocol compatibility test (requires external Python XML-RPC server)
+# Run with: XMLRPC_TEST_PORT=8000 ./tests/wire-compatibility-test
+add_executable(wire-compatibility-test test_wire_compatibility.cc)
+target_link_libraries(wire-compatibility-test iqxmlrpc ${Boost_LIBRARIES} ${LIBXML2_LIBRARIES} ${OPENSSL_LIBRARIES})
+
+# Copy interop test scripts to build directory
+file(COPY interop DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
