Add interoperability tests to CI
Run `make interop-test` after unit tests to verify wire protocol
compatibility with Python's XML-RPC implementation on all platforms.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,11 @@ jobs:
     - name: Test
       run: ctest --test-dir build --output-on-failure
 
+    - name: Interop Test
+      run: |
+        cd build
+        make interop-test
+
   sanitizers:
     name: ASan/UBSan
     runs-on: ubuntu-24.04
