Replace Boost with C++ standard library where possible
This change significantly reduces the library's dependency on Boost by replacing
Boost components with their C++ standard library equivalents (C++11/17):

Core library changes:
- boost::thread → std::thread
- boost::mutex → std::mutex
- boost::condition → std::condition_variable
- boost::mutex::scoped_lock → std::unique_lock<std::mutex>
- boost::once_flag/call_once → std::once_flag/std::call_once
- boost::date_time::posix_time → std::chrono + <ctime>
- boost::algorithm::string functions → custom implementations
- boost::cerrno → standard <cerrno>

Test file changes:
- boost::thread_group → std::vector<std::thread>
- boost::this_thread::sleep_for → std::this_thread::sleep_for
- boost::chrono → std::chrono
- boost::optional → std::optional (C++17)
- boost::bind → lambdas/std::bind
- Removed boost::lexical_cast benchmarks (already replaced with num_conv)

CMake changes:
- Core library no longer requires Boost (uses Threads::Threads)
- Tests only require Boost.Test and Boost.program_options

Updated pkg-config to reflect the new dependencies (-lpthread instead of Boost).

All tests pass with the new implementations.

--- a/libiqxmlrpc.pc.in
+++ b/libiqxmlrpc.pc.in
@@ -6,5 +6,5 @@ Name: libiqxmlrpc
 Description: Object-oriented C++ XML-RPC library.
 Version: @Libiqxmlrpc_VERSION@
 Requires: libxml-2.0
-Libs: -L${libdir} -liqxmlrpc @PC_BOOST_LIBRARIES@ @PC_OPENSSL_LDFLAGS@
+Libs: -L${libdir} -liqxmlrpc -lpthread @PC_OPENSSL_LDFLAGS@
 Cflags: -I${includedir}
