Enable strict compiler warnings by default
Add -Wall -Wextra -Weffc++ -Werror flags to CMake configuration
for GCC and Clang compilers. This ensures code quality by catching
potential issues at compile time and enforcing Effective C++ guidelines.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,11 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+# Enable strict compiler warnings by default
+if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    add_compile_options(-Wall -Wextra -Weffc++ -Werror)
+endif()
+
 # Code coverage option
 option(ENABLE_COVERAGE "Enable code coverage" OFF)
 if(ENABLE_COVERAGE)
