Add TSan suppression for glibc resolver internal races
The glibc DNS resolver (gethostbyname_r, getaddrinfo) uses internal
dynamic arrays via __libc_dynarray_emplace_enlarge that have shared
state. While the resolver's internal synchronization is correct,
TSan cannot track it and reports false positives.

This is a known limitation with glibc's NSS (Name Service Switch)
implementation. The suppression file filters out these false positives
while still allowing TSan to detect real races in our code.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -163,7 +163,7 @@ jobs:
     - name: Test
       run: ctest --test-dir build --output-on-failure
       env:
-        TSAN_OPTIONS: halt_on_error=1:second_deadlock_stack=1:history_size=4
+        TSAN_OPTIONS: halt_on_error=1:second_deadlock_stack=1:history_size=4:suppressions=${{ github.workspace }}/tests/tsan.suppressions
 
   cppcheck:
     name: cppcheck
