Fix data races detected by Thread Sanitizer (#74)
* Fix data races detected by Thread Sanitizer

Add Thread Sanitizer (TSan) to CI and fix multiple data races:

Server races (server.cc):
1. Server::exit_flag - converted from bool to std::atomic<bool>
2. Server::firewall - converted from raw pointer to std::atomic
3. Server::idle_timeout - converted to atomic int64_t with proper accessors
4. Server::connections - protected with mutex for thread-safe access

Reactor race (reactor_impl.h):
5. Reactor::handle_events() - added scoped_lock around handlers map access

Inet_addr race (inet_addr.cc):
6. Inet_addr::get_sockaddr() - lazy init protected with std::call_once

Test infrastructure (tests/methods.cc):
7. BOOST_TEST_MESSAGE - wrapped with mutex for thread-safe logging

These races could cause undefined behavior, missed shutdown signals,
or crashes under high concurrency.

* Fix -Werror=effc++ error for sa_init_flag member

Initialize sa_init_flag in member initialization lists of all
Inet_addr::Impl constructors to satisfy -Werror=effc++ which
requires all members to be initialized in the initialization list.

* Add TSan suppression for glibc resolver internal races

The glibc DNS resolver (gethostbyname_r, getaddrinfo) uses internal
dynamic arrays via __libc_dynarray_emplace_enlarge that have shared
state. While the resolver's internal synchronization is correct,
TSan cannot track it and reports false positives.

This is a known limitation with glibc's NSS (Name Service Switch)
implementation. The suppression file filters out these false positives
while still allowing TSan to detect real races in our code.

* Serialize DNS lookups to fix glibc resolver race

Add a global mutex to serialize gethostbyname_r calls. While
gethostbyname_r provides thread-local result buffers, glibc's
internal NSS implementation uses shared dynamic arrays that
cause TSan warnings when multiple threads resolve hostnames
simultaneously.

The performance impact is minimal since:
- DNS result

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,6 +136,35 @@ jobs:
         fail_ci_if_error: true
         verbose: true
 
+  tsan:
+    name: TSan
+    runs-on: ubuntu-24.04
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Install dependencies
+      run: sudo apt-get update && sudo apt-get install -y clang libboost-dev libboost-date-time-dev libboost-thread-dev libboost-test-dev libboost-program-options-dev libboost-chrono-dev libxml2-dev libssl-dev
+
+    - name: Configure
+      run: |
+        mkdir build && cd build
+        cmake -Dbuild_tests=ON \
+          -DCMAKE_C_COMPILER=clang \
+          -DCMAKE_CXX_COMPILER=clang++ \
+          -DCMAKE_CXX_FLAGS="-DBOOST_TIMER_ENABLE_DEPRECATED -fsanitize=thread -fno-omit-frame-pointer -g" \
+          -DCMAKE_EXE_LINKER_FLAGS="-fsanitize=thread" \
+          -DCMAKE_SHARED_LINKER_FLAGS="-fsanitize=thread" \
+          ..
+
+    - name: Build
+      run: cmake --build build
+
+    - name: Test
+      run: ctest --test-dir build --output-on-failure
+      env:
+        TSAN_OPTIONS: halt_on_error=1:second_deadlock_stack=1:history_size=4:suppressions=${{ github.workspace }}/tests/tsan.suppressions
+
   cppcheck:
     name: cppcheck
     runs-on: ubuntu-latest
