Replace mutex-based work queue with lock-free queue in thread pool
Performance improvement: Replace std::deque + std::mutex with
boost::lockfree::queue in Pool_executor_factory for dramatically
better tail latency under contention.

## Changes

### Core Implementation
- Replace mutex-protected deque with boost::lockfree::queue (capacity 1024)
- Use hybrid approach: lock-free queue + condition variable for idle sleep
- Add atomic pending_count for efficient worker wakeup
- Clean shutdown via atomic flag + notify_all

### Test Infrastructure
- Add test_thread_safety.cc with lock-free queue stress tests
- Add test_common.h with shared IntegrationFixture
- Add test_perf_utils.cc with 34 unit tests for benchmark utilities
- Add LatencyStats class for percentile analysis in benchmarks

### CI Improvements
- Add interop tests to ASan/UBSan and TSan jobs
- Add interop tests to coverage job
- Add TSan suppressions for Boost.Lockfree false positives
- Add "lockfree_stress" label to exclude stress tests from TSan
- Remove ALL from check target for better CI control
- Set halt_on_error=1 in TSAN_OPTIONS

## Benchmark Results

Lock-free queue vs mutex-protected queue (4 producers, 2 consumers):

| Metric | Mutex | Lock-Free | Improvement |
|--------|-------|-----------|-------------|
| p99 Latency | 17.3 ms | 3.2 ms | 82% faster |
| Max Latency | 17.4 ms | 3.4 ms | 81% faster |
| Std Dev | 4.2M ns | 472K ns | 89% lower |

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,11 @@ jobs:
     - name: Configure
       run: |
         mkdir build && cd build
-        cmake -Dbuild_tests=ON -DCMAKE_CXX_FLAGS="-DBOOST_TIMER_ENABLE_DEPRECATED -Wall -Wextra -Weffc++ -Werror" ..
+        CMAKE_EXTRA_ARGS=""
+        if [ "$(uname)" = "Darwin" ]; then
+          CMAKE_EXTRA_ARGS="-DBOOST_ROOT=$(brew --prefix boost)"
+        fi
+        cmake -Dbuild_tests=ON -DCMAKE_CXX_FLAGS="-DBOOST_TIMER_ENABLE_DEPRECATED -Wall -Wextra -Weffc++ -Werror" $CMAKE_EXTRA_ARGS ..
 
     - name: Build
       run: cmake --build build
@@ -81,6 +85,14 @@ jobs:
         ASAN_OPTIONS: detect_leaks=1:abort_on_error=1
         UBSAN_OPTIONS: print_stacktrace=1:abort_on_error=1
 
+    - name: Interop Test
+      run: |
+        cd build
+        make interop-test
+      env:
+        ASAN_OPTIONS: detect_leaks=1:abort_on_error=1
+        UBSAN_OPTIONS: print_stacktrace=1:abort_on_error=1
+
   coverage:
     name: coverage
     runs-on: ubuntu-24.04
@@ -106,6 +118,11 @@ jobs:
 
     - name: Test
       run: ctest --test-dir build --output-on-failure --output-junit junit.xml
+
+    - name: Interop Test
+      run: |
+        cd build
+        make interop-test
 
     - name: Upload test results to Codecov
       if: ${{ !cancelled() }}
@@ -161,7 +178,18 @@ jobs:
       run: cmake --build build
 
     - name: Test
-      run: ctest --test-dir build --output-on-failure
+      run: |
+        # Exclude lockfree_stress tests - they stress-test Boost.Lockfree which
+        # produces TSan false positives. These tests validate correctness via
+        # data integrity checks, not TSan cleanliness.
+        ctest --test-dir build -LE lockfree_stress --output-on-failure
+      env:
+        TSAN_OPTIONS: halt_on_error=1:second_deadlock_stack=1:history_size=4:suppressions=${{ github.workspace }}/tests/tsan.suppressions
+
+    - name: Interop Test
+      run: |
+        cd build
+        make interop-test
       env:
         TSAN_OPTIONS: halt_on_error=1:second_deadlock_stack=1:history_size=4:suppressions=${{ github.workspace }}/tests/tsan.suppressions
 
