Fix fuzz CI job by disabling tests
The fuzz build was failing because Boost.Test library isn't
compatible with ASan/fuzzer sanitizer flags. Disable test builds
since we only need to build fuzzers in this job.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -214,6 +214,7 @@ jobs:
           -DCMAKE_SHARED_LINKER_FLAGS="-fsanitize=address" \
           -DLIB_FUZZING_ENGINE="-fsanitize=fuzzer" \
           -Dbuild_fuzzers=ON \
+          -Dbuild_tests=OFF \
           ..
 
     - name: Build
