Fix crash detection logic for partial glob matches
The previous `ls crash-* oom-*` failed when only one pattern matched
because ls returns error for the missing pattern. Use separate ls
commands with OR to correctly detect crashes even when only crash-*
or only oom-* files exist.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -250,7 +250,7 @@ jobs:
 
     - name: Check for crashes
       run: |
-        if ls build/fuzz/crash-* build/fuzz/oom-* 2>/dev/null; then
+        if ls build/fuzz/crash-* 2>/dev/null || ls build/fuzz/oom-* 2>/dev/null; then
           echo "::error::Fuzzer found crashes!"
           exit 1
         fi
