Add SSL factory injection for HTTPS proxy testing
Implement dependency injection pattern to test HTTPS proxy tunnel setup
without requiring actual SSL handshake.

Changes:
- Add SslConnectionFactory type and set_ssl_factory() method to
  Https_proxy_client_connection for injecting mock SSL behavior
- Wrap factory code in #ifdef IQXMLRPC_TESTING compile-time guards
- Add ENABLE_TESTING_HOOKS CMake option (defaults OFF)
- Add #pragma message warning when testing hooks are enabled
- Add CMake warning when hooks enabled but tests disabled

Tests added:
- https_proxy_ssl_factory_success: Verifies tunnel + mock SSL response
- https_proxy_ssl_factory_parameters: Validates factory receives correct params
- https_proxy_ssl_factory_exception: Tests exception propagation from factory

Security:
- Factory code is completely absent from production builds
- Dual warnings (CMake + compiler) prevent accidental production use
- Default configuration is secure (ENABLE_TESTING_HOOKS=OFF)

Build configurations:
- Default: 141 tests, no factory code compiled
- ENABLE_TESTING_HOOKS=ON: 144 tests, factory injection available

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,9 +22,19 @@ if(ENABLE_COVERAGE)
     endif()
 endif()
 
+# Test hooks option - must be set before library compilation
+option(build_tests "Build tests?" ON)
+option(ENABLE_TESTING_HOOKS "Enable test hooks for SSL factory injection (test builds only)" OFF)
+if(ENABLE_TESTING_HOOKS)
+    if(NOT build_tests)
+        message(WARNING "ENABLE_TESTING_HOOKS is enabled but build_tests is OFF. "
+                        "Testing hooks are only useful when tests are built.")
+    endif()
+    add_compile_definitions(IQXMLRPC_TESTING)
+endif()
+
 add_subdirectory(libiqxmlrpc)
 
-option(build_tests "Build tests?" ON)
 if (build_tests)
 	enable_testing()
 	add_subdirectory(tests)
