Final fuzzing polish: dictionaries, strict mode, CMake guard
Dictionary improvements:
- http.dict: Add Base64/auth tokens (Basic, sample credentials, malformed padding)
- http.dict: Add header injection testing tokens (CRLF)
- http.dict: Add Content-Length edge cases (-0, 00, +0)
- xml.dict: Add UTF-8 BOM for real-world XML compatibility
- xml.dict: Add numeric character references (&#65;, &#x41;, etc.)

Code improvements:
- fuzz_http.cc: Add HTTP_CHECK_STRICT mode for response parsing
- CMakeLists.txt: Add warning when LIB_FUZZING_ENGINE is not set

--- a/fuzz/CMakeLists.txt
+++ b/fuzz/CMakeLists.txt
@@ -18,6 +18,12 @@ cmake_minimum_required(VERSION 3.10)
 #   xml.dict  - XML-RPC tokens for fuzz_request, fuzz_response, fuzz_value
 #   http.dict - HTTP tokens for fuzz_http
 
+# Validate that LIB_FUZZING_ENGINE is set
+if(NOT DEFINED LIB_FUZZING_ENGINE OR "${LIB_FUZZING_ENGINE}" STREQUAL "")
+  message(WARNING "LIB_FUZZING_ENGINE not set. Fuzz targets will not link correctly. "
+                  "Set -DLIB_FUZZING_ENGINE=\"-fsanitize=fuzzer\" for libFuzzer.")
+endif()
+
 set(FUZZ_TARGETS
   fuzz_request
   fuzz_response
