Complete fuzzing coverage: final polish
CMake improvements:
- Add EXCLUDE_FROM_ALL to prevent building fuzz targets without fuzzer support
- Fuzz targets now require explicit build: make fuzz_request fuzz_response...

Dictionary improvements:
- xml.dict: Add UTF-8 edge cases (overlong encodings, surrogate halves)
- http.dict: Add request smuggling patterns (conflicting CL/TE headers)
- http.dict: Add HTTP version edge cases (0.9, 2, 3)
- http.dict: Add folded headers and null byte testing

API coverage improvements:
- fuzz_http.cc: Add expect_continue() method coverage
- fuzz_common.h: Add type_name() method coverage

--- a/fuzz/CMakeLists.txt
+++ b/fuzz/CMakeLists.txt
@@ -32,7 +32,9 @@ set(FUZZ_TARGETS
 )
 
 foreach(target ${FUZZ_TARGETS})
-  add_executable(${target} ${target}.cc)
+  # EXCLUDE_FROM_ALL prevents building fuzz targets in normal builds
+  # Build explicitly with: make fuzz_request fuzz_response fuzz_http fuzz_value
+  add_executable(${target} EXCLUDE_FROM_ALL ${target}.cc)
   target_link_libraries(${target} iqxmlrpc ${LIB_FUZZING_ENGINE})
   target_include_directories(${target} PRIVATE ${CMAKE_SOURCE_DIR})
 endforeach()
