Continue test file restructuring for faster incremental compilation
Split additional test suites from test_integration.cc into focused files:
- test_integration_errors.cc: error_path_tests, network_error_tests
- test_integration_reactor.cc: reactor_error_tests, reactor_mask_tests
- test_integration_advanced.cc: interceptor_tests, server_config_tests,
  defensive_sync_tests

Fixed port conflicts by assigning unique port offsets (160+) to avoid
test isolation issues with other test files.

This completes the restructuring started in 4aedd35, reducing the main
test file from 4,097 to 2,323 lines (43% reduction). All 144 tests pass.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -65,6 +65,9 @@ set(INTEGRATION_TEST_SOURCES
     test_integration_client.cc
     test_integration_connection.cc
     test_integration_ssl.cc
+    test_integration_errors.cc
+    test_integration_reactor.cc
+    test_integration_advanced.cc
     methods.cc
 )
 iqxmlrpc_test(integration-test ${INTEGRATION_TEST_SOURCES})
