Comprehensive fuzzing infrastructure improvements
New fuzz targets (3):
- fuzz_serialize.cc: Round-trip testing (parse -> serialize -> re-parse)
- fuzz_num_conv.cc: Number conversion functions (from_string, string_to_double)
- fuzz_xheaders.cc: XHeaders validation and container operations

Harness improvements:
- fuzz_value.cc: Fix size check for XML wrapper overhead, add Date_time
  direct parsing and Binary_data fuzzing
- fuzz_http.cc: Add set_authinfo() fuzzing for Base64 construction path
- fuzz_packet.cc: Add set_continue_sent() state coverage
- fuzz_common.h: Add has_field()/operator[] exercising for Struct values

Build configuration:
- build.sh: Fix C++11 -> C++17 to test std::from_chars paths
- build.sh: Add seed corpora for all 9 fuzz targets
- CMakeLists.txt: Add dictionary auto-association for OSS-Fuzz
- project.yaml: Add coverage sanitizer option

Dictionary additions:
- xml.dict: Introspection methods, XML 1.0 5th edition patterns, DTD subset
- http.dict: RFC 9110 patterns (TE, Trailer, Priority, Alt-Svc)

--- a/fuzz/project.yaml
+++ b/fuzz/project.yaml
@@ -9,6 +9,8 @@ sanitizers:
   - address
   - undefined
   - memory
+  # Coverage mode for guided fuzzing without sanitizer overhead
+  - coverage
 fuzzing_engines:
   - libfuzzer
   - afl
