--- a/fuzz/CMakeLists.txt
+++ b/fuzz/CMakeLists.txt
@@ -52,7 +52,7 @@ set(FUZZ_TARGETS
 
 foreach(target ${FUZZ_TARGETS})
   # EXCLUDE_FROM_ALL prevents building fuzz targets in normal builds
-  # Build explicitly with: make fuzz_request fuzz_response ...
+  # Build explicitly with: make <target_name> (e.g., make fuzz_request)
   add_executable(${target} EXCLUDE_FROM_ALL ${target}.cc)
   target_link_libraries(${target} iqxmlrpc ${LIB_FUZZING_ENGINE})
   target_include_directories(${target} PRIVATE ${CMAKE_SOURCE_DIR})
