Add comprehensive security hardening
Security improvements for defense-in-depth protection:

TLS/SSL Hardening:
- Enforce TLS 1.2 as minimum version (disable SSLv2/3, TLS 1.0/1.1)
- Configure strong cipher suites (ECDHE + AES-GCM, ChaCha20-Poly1305)
- Add hostname verification with X509_VERIFY_PARAM (OpenSSL 1.0.2+)
- Add SNI (Server Name Indication) support for virtual hosting
- Add configurable session caching for performance

HTTP Security Headers:
- Add X-Content-Type-Options: nosniff (prevent MIME sniffing)
- Add X-Frame-Options: DENY (prevent clickjacking)
- Add Cache-Control: no-store (prevent caching sensitive data)
- Add optional HSTS header support (enable_hsts)
- Add optional Content-Security-Policy support (set_content_security_policy)
- Add server version hiding (hide_server_version, set_server_header)

DoS Protection:
- Add RateLimitingFirewall with per-IP and total connection limits
- Add request rate limiting (sliding window, configurable RPS)
- Add HTTP header size limit (default 16KB, configurable)
- Add idle connection timeout support

Input Validation:
- Use safe_math.h for Content-Length overflow checks
- Sanitize content-type in error messages

Thread Safety:
- Thread-safe static HTTP config (atomics + mutex)
- Atomic rate limiter configuration (max_rps)
- Proper mutex protection for connection/rate tracking

All changes are backward compatible - new security features are opt-in
or have sensible defaults that don't break existing code.

--- a/libiqxmlrpc/CMakeLists.txt
+++ b/libiqxmlrpc/CMakeLists.txt
@@ -85,6 +85,7 @@ add_library(iqxmlrpc
   connector.cc
   dispatcher_manager.cc
   executor.cc
+  firewall.cc
   http.cc
   http_client.cc
   https_client.cc
