Set benchmark threshold to 50% for CI stability
The 150% threshold from the methodology transition was too permissive,
but 20% is too strict for multi-threaded latency benchmarks which can
vary 50-100% due to thread scheduling on shared CI runners.

50% is a balanced threshold that:
- Catches significant performance regressions (>50% slowdown)
- Tolerates natural variance in queue latency benchmarks (P90/P95)
- Avoids false positives from CI runner scheduling differences

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -25,13 +25,12 @@ on:
       threshold:
         description: 'Regression threshold percentage (must be positive number)'
         required: false
-        default: '20'
+        default: '50'
 
 env:
-  # TEMPORARY: 150% threshold for methodology transition (increased iteration counts).
-  # TODO: Lower back to 20% after this PR merges and baseline is established.
-  # See: https://github.com/yarikmsu/libiqxmlrpc/pull/110
-  REGRESSION_THRESHOLD: ${{ github.event.inputs.threshold || '150' }}
+  # 50% threshold accounts for CI runner variance, especially on multi-threaded
+  # latency benchmarks (queue P90/P95) which can vary 50-100% due to scheduling
+  REGRESSION_THRESHOLD: ${{ github.event.inputs.threshold || '50' }}
 
 jobs:
   benchmark:
