Add tiered thresholds for benchmark CI stability
Implement per-benchmark threshold support to handle high-variance
benchmarks without loosening thresholds for all benchmarks.

Configuration:
- Default threshold: 20% (catches real regressions)
- Relaxed threshold: 100% for queue latency benchmarks only

Queue latency benchmarks (perf_lockfree_queue_p90_latency,
perf_lockfree_queue_p95_latency) show 50-100% variance on CI runners
due to thread scheduling noise. These are tail latency measurements
that amplify any scheduling delays.

Changes:
- compare_benchmarks.py: Add --relaxed-threshold and --relaxed-benchmarks
  options for tiered threshold support
- benchmark.yml: Use 20% default with 100% for queue benchmarks
- local_benchmark_compare.sh: Apply same tiered thresholds locally

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -23,14 +23,17 @@ on:
   workflow_dispatch:
     inputs:
       threshold:
-        description: 'Regression threshold percentage (must be positive number)'
+        description: 'Default regression threshold percentage (must be positive number)'
         required: false
-        default: '50'
+        default: '20'
 
 env:
-  # 50% threshold accounts for CI runner variance, especially on multi-threaded
-  # latency benchmarks (queue P90/P95) which can vary 50-100% due to scheduling
-  REGRESSION_THRESHOLD: ${{ github.event.inputs.threshold || '50' }}
+  # 20% default threshold catches most regressions while allowing normal CI variance
+  REGRESSION_THRESHOLD: ${{ github.event.inputs.threshold || '20' }}
+  # Queue latency benchmarks (P90/P95) use 100% threshold due to thread scheduling noise
+  # These benchmarks show 50-100% variance on CI runners even with 5-run minimum selection
+  RELAXED_THRESHOLD: '100'
+  RELAXED_BENCHMARKS: 'perf_lockfree_queue_p90_latency,perf_lockfree_queue_p95_latency'
 
 jobs:
   benchmark:
@@ -144,7 +147,8 @@ jobs:
         # Note: -e omitted intentionally to capture Python script exit code
         set -uo pipefail
         echo "Comparing PR results against master branch..."
-        echo "Threshold: ${REGRESSION_THRESHOLD}%"
+        echo "Default threshold: ${REGRESSION_THRESHOLD}%"
+        echo "Relaxed threshold: ${RELAXED_THRESHOLD}% for: ${RELAXED_BENCHMARKS}"
         # Run comparison and capture exit code
         # Exit 0 = pass, Exit 1 = regression detected, Exit 2 = script error
         exit_code=0
@@ -152,6 +156,8 @@ jobs:
           build/master_results.txt \
           build/pr_results.txt \
           --threshold="${REGRESSION_THRESHOLD}" \
+          --relaxed-threshold="${RELAXED_THRESHOLD}" \
+          --relaxed-benchmarks="${RELAXED_BENCHMARKS}" \
           --github-actions | tee benchmark_report.txt || exit_code=$?
         if [ "$exit_code" -eq 1 ]; then
           echo "has_regression=true" >> "$GITHUB_OUTPUT"
