--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -23,14 +23,18 @@ on:
   workflow_dispatch:
     inputs:
       threshold:
-        description: 'Regression threshold percentage (must be positive number)'
+        description: 'Default regression threshold percentage (must be positive number)'
         required: false
-        default: '50'
+        default: '20'
 
 env:
-  # 50% threshold accounts for CI runner variance, especially on multi-threaded
-  # latency benchmarks (queue P90/P95) which can vary 50-100% due to scheduling
-  REGRESSION_THRESHOLD: ${{ github.event.inputs.threshold || '50' }}
+  # 20% default threshold catches most regressions while allowing normal CI variance
+  REGRESSION_THRESHOLD: ${{ github.event.inputs.threshold || '20' }}
+  # These 3 benchmarks have demonstrated CI failures due to inherent variance:
+  # - perf_lockfree_queue_p90/p95_latency: Thread scheduling noise (50-95% variance)
+  # - perf_string_to_int_new: Sub-nanosecond measurement (~1ns, 69% variance observed)
+  RELAXED_THRESHOLD: '100'
+  RELAXED_BENCHMARKS: 'perf_lockfree_queue_p90_latency,perf_lockfree_queue_p95_latency,perf_string_to_int_new'
 
 jobs:
   benchmark:
@@ -144,7 +148,8 @@ jobs:
         # Note: -e omitted intentionally to capture Python script exit code
         set -uo pipefail
         echo "Comparing PR results against master branch..."
-        echo "Threshold: ${REGRESSION_THRESHOLD}%"
+        echo "Default threshold: ${REGRESSION_THRESHOLD}%"
+        echo "Relaxed threshold: ${RELAXED_THRESHOLD}% for: ${RELAXED_BENCHMARKS}"
         # Run comparison and capture exit code
         # Exit 0 = pass, Exit 1 = regression detected, Exit 2 = script error
         exit_code=0
@@ -152,6 +157,8 @@ jobs:
           build/master_results.txt \
           build/pr_results.txt \
           --threshold="${REGRESSION_THRESHOLD}" \
+          --relaxed-threshold="${RELAXED_THRESHOLD}" \
+          --relaxed-benchmarks="${RELAXED_BENCHMARKS}" \
           --github-actions | tee benchmark_report.txt || exit_code=$?
         if [ "$exit_code" -eq 1 ]; then
           echo "has_regression=true" >> "$GITHUB_OUTPUT"
