--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -25,15 +25,16 @@ on:
       threshold:
         description: 'Default regression threshold percentage (must be positive number)'
         required: false
-        default: '20'
+        default: '15'
 
 env:
-  # 20% default threshold catches most regressions while allowing normal CI variance
-  REGRESSION_THRESHOLD: ${{ github.event.inputs.threshold || '20' }}
+  # 15% default threshold for tighter regression detection
+  REGRESSION_THRESHOLD: ${{ github.event.inputs.threshold || '15' }}
   # These 3 benchmarks have demonstrated CI failures due to inherent variance:
   # - perf_lockfree_queue_p90/p95_latency: Thread scheduling noise (50-95% variance)
   # - perf_string_to_int_new: Sub-nanosecond measurement (~1ns, 69% variance observed)
-  RELAXED_THRESHOLD: '100'
+  # 75% threshold catches real regressions while tolerating normal CI variance (~11%)
+  RELAXED_THRESHOLD: '75'
   RELAXED_BENCHMARKS: 'perf_lockfree_queue_p90_latency,perf_lockfree_queue_p95_latency,perf_string_to_int_new'
 
 jobs:
